--- a/prompt_reviewer.yaml
+++ b/prompt_reviewer.yaml
@@ -1,14 +1,17 @@
 model: o3-mini
+defaults:
+  language: "Mardarin Taiwanese"
+  simple_prompt: "Summarize this news article and contains the type of news, tags and sentiment analysis."
 prompt: |
     Given a current prompt and a change description, produce a detailed system prompt to guide a language model in completing the task effectively.
-    
+
     Your final output will be the full corrected prompt verbatim. However, before that, at the very beginning of your response, use <reasoning> tags to analyze the prompt and determine the following, explicitly:
     <reasoning>
     - Simple Change: (yes/no) Is the change description explicit and simple? (If so, skip the rest of these questions.)
-    - Reasoning: (yes/no) Does the current prompt use reasoning, analysis, or chain of thought? 
+    - Reasoning: (yes/no) Does the current prompt use reasoning, analysis, or chain of thought?
         - Identify: (max 10 words) if so, which section(s) utilize reasoning?
         - Conclusion: (yes/no) is the chain of thought used to determine a conclusion?
-        - Ordering: (before/after) is the chain of though located before or after 
+        - Ordering: (before/after) is the chain of though located before or after
     - Structure: (yes/no) does the input prompt have a well defined structure
     - Examples: (yes/no) does the input prompt have few-shot examples
         - Representative: (1-5) if present, how representative are the examples?
@@ -19,9 +22,9 @@ prompt: |
     - Prioritization: (list) what 1-3 categories are the MOST important to address.
     - Conclusion: (max 30 words) given the previous assessment, give a very concise, imperative description of what should be changed and how. this does not have to adhere strictly to only the categories listed
     </reasoning>
-        
+
     # Guidelines
-    
+
     - Understand the Task: Grasp the main objective, goals, requirements, constraints, and expected output.
     - Minimal Changes: If an existing prompt is provided, improve it only if it's simple. For complex prompts, enhance clarity and add missing elements without altering the original structure.
     - Reasoning Before Conclusions**: Encourage reasoning steps before any conclusions are reached. ATTENTION! If the user provides examples where the reasoning happens afterward, REVERSE the order! NEVER START EXAMPLES WITH CONCLUSIONS!
@@ -36,29 +39,33 @@ prompt: |
     - Output Format: Explicitly the most appropriate output format, in detail. This should include length and syntax (e.g. short sentence, paragraph, JSON, etc.)
         - For tasks outputting well-defined or structured data (classification, JSON, etc.) bias toward outputting a JSON.
         - JSON should never be wrapped in code blocks (```) unless explicitly requested.
-    
+
     The final prompt you output should adhere to the following structure below. Do not include any additional commentary, only output the completed system prompt. SPECIFICALLY, do not include any additional messages at the start or end of the prompt. (e.g. no "---")
-    
+
     [Concise instruction describing the task - this should be the first line in the prompt, no section header]
-    
+
     [Additional details as needed.]
-    
+
     [Optional sections with headings or bullet points for detailed steps.]
-    
+
     # Steps [optional]
-    
+
     [optional: a detailed breakdown of the steps necessary to accomplish the task]
-    
+
     # Output Format
-    
+
     [Specifically call out how the output should be formatted, be it response length, structure e.g. JSON, markdown, etc]
-    
+
     # Examples [optional]
-    
+
     [Optional: 1-3 well-defined examples with placeholders if necessary. Clearly mark where examples start and end, and what the input and output are. User placeholders as necessary.]
     [If the examples are shorter than what a realistic example is expected to be, make a reference with () explaining how real examples should be longer / shorter / different. AND USE PLACEHOLDERS! ]
-    
+
     # Notes [optional]
-    
+
     [optional: edge cases, details, and an area to call or repeat out specific important considerations]
     [NOTE: you must start with a <reasoning> section. the immediate next token you produce should be <reasoning>]
+
+    Task, Goal, or Current Prompt:
+
+    $simple_prompt Ensure all parts of the response are in $language
