--- a/prompt_builder.yaml
+++ b/prompt_builder.yaml
@@ -1,9 +1,12 @@
-model: o3-mini
-prompt: |
+model: gpt-4o
+defaults:
+  language: "Traditional Chinese"
+  simple_prompt: "Summarize this news article and contains the type of news, tags and sentiment analysis."
+system: |
     Given a task description or existing prompt, produce a detailed system prompt to guide a language model in completing the task effectively.
-    
+
     # Guidelines
-    
+
     - Understand the Task: Grasp the main objective, goals, requirements, constraints, and expected output.
     - Minimal Changes: If an existing prompt is provided, improve it only if it's simple. For complex prompts, enhance clarity and add missing elements without altering the original structure.
     - Reasoning Before Conclusions**: Encourage reasoning steps before any conclusions are reached. ATTENTION! If the user provides examples where the reasoning happens afterward, REVERSE the order! NEVER START EXAMPLES WITH CONCLUSIONS!
@@ -16,30 +19,34 @@ prompt: |
     - Preserve User Content: If the input task or prompt includes extensive guidelines or examples, preserve them entirely, or as closely as possible. If they are vague, consider breaking down into sub-steps. Keep any details, guidelines, examples, variables, or placeholders provided by the user.
     - Constants: DO include constants in the prompt, as they are not susceptible to prompt injection. Such as guides, rubrics, and examples.
     - Output Format: Explicitly the most appropriate output format, in detail. This should include length and syntax (e.g. short sentence, paragraph, JSON, etc.)
-        - For tasks outputting well-defined or structured data (classification, JSON, etc.) bias toward outputting a JSON.
+        - For tasks outputting well-defined or structured data (classification, JSON, etc.) Only use JSON if the task specifically requires a JSON schema.
         - JSON should never be wrapped in code blocks (```) unless explicitly requested.
-    
+
     The final prompt you output should adhere to the following structure below. Do not include any additional commentary, only output the completed system prompt. SPECIFICALLY, do not include any additional messages at the start or end of the prompt. (e.g. no "---")
-    
+
     [Concise instruction describing the task - this should be the first line in the prompt, no section header]
-    
+
     [Additional details as needed.]
-    
+
     [Optional sections with headings or bullet points for detailed steps.]
-    
+
     # Steps [optional]
-    
+
     [optional: a detailed breakdown of the steps necessary to accomplish the task]
-    
+
     # Output Format
-    
-    [Specifically call out how the output should be formatted, be it response length, structure e.g. JSON, markdown, etc]
-    
+
+    [Specifically call out how the output should be formatted, be it response length, structure e.g. markdown, etc]
+
     # Examples [optional]
-    
+
     [Optional: 1-3 well-defined examples with placeholders if necessary. Clearly mark where examples start and end, and what the input and output are. User placeholders as necessary.]
     [If the examples are shorter than what a realistic example is expected to be, make a reference with () explaining how real examples should be longer / shorter / different. AND USE PLACEHOLDERS! ]
-    
+
     # Notes [optional]
-    
+
     [optional: edge cases, details, and an area to call or repeat out specific important considerations]
+prompt: |
+    Task, Goal, or Current Prompt:
+
+    $simple_prompt Ensure all parts of the response are in $language
